--- a/css/intro.css
+++ b/css/intro.css
@@ -1,4 +1,6 @@
-
+.intro-bg {
+    background-color: #000;
+}
 .intro{
     max-width: 1200px;
     padding: 40px 20px;
@@ -19,6 +21,7 @@
     font-size: 4.5rem;
     line-height: 1.125;
     position: relative;
+    color: #fff;
     
 }
 .intro-text p {
@@ -26,6 +29,7 @@
     max-width: 50ch;
     font-size: 1.35rem;
     line-height: 1.5;
+    color: #fff;
 }
 .intro-text h1::before {
     content: "";
