--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-@import '/css/global.css';
-@import "/css/header.css";
-@import '/css/intro.css';
-@import '/css/education.css';
-@import '/css/experience.css';
+
+@import url("/css/global.css");
+@import url("/css/header.css");
+
+@import url("/css/intro.css");
+@import url("/css/education.css");
+@import url("/css/experience.css");
